Fix resolution on mobile Decrease font size on mobile to 12px Decrease font size on tablet to 14px Fix Cover section width Fix Navigation section items position

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -16,6 +16,13 @@ html {
   font-size: 16px;
   font-family: 'Roboto', sans-serif;
   scroll-behavior: smooth;
+
+  @media screen and (max-width: $tablet) {
+    font-size: 14px;
+  }
+  @media screen and (max-width: $mobile) {
+    font-size: 12px;
+  }
 }
 
 *, *:before, *:after {
