--- a/src/scss/modules/cover.scss
+++ b/src/scss/modules/cover.scss
@@ -1,5 +1,6 @@
 .cover {
     height: 100vh;
+    max-height: 100%;
     width: 100vw;
     max-width: 100%;
     background-image: url(../assets/img/cover.jpg);
@@ -8,7 +9,9 @@
 
     &__overlay {
         width: 100%;
+        max-width: 100%;
         height: 100%;
+        max-height: 100%;
         background: rgba($color: #000000, $alpha: .5);
         // background: linear-gradient(180deg, rgba(2, 0, 36, 1) 0%, rgba(0, 159, 164, 0.43040966386554624) 50%, rgba(255, 255, 255, 0) 100%);
         display: flex;
@@ -48,6 +51,7 @@
 .header {
     max-width: 100%;
     margin: auto;
+    overflow: hidden;
 
     &__title {
         color: $white;
@@ -55,6 +59,10 @@
         padding: .5rem;
         font-size: 4rem;
         border: 4px $white solid;
+
+        @media screen and (max-width: $mobile) {
+          font-size: 3rem;
+        }
     }
 
     &__subtitle {
@@ -62,5 +70,9 @@
         color: $white;
         font-size: 2.5rem;
         text-align: center;
+
+        @media screen and (max-width: $mobile) {
+          font-size: 2.25rem;
+        }
     }
 }
