--- a/src/scss/modules/navigation.scss
+++ b/src/scss/modules/navigation.scss
@@ -1,7 +1,7 @@
 .navigation {
 
     background: $terminalBarBackgroundDark;
-    padding: .5rem 1rem;
+    padding: 1rem 1.5rem;
     z-index: 1;
     position: fixed;
     width: 100%;
@@ -45,6 +45,7 @@
         list-style-type: none;
         display: flex;
         margin: 0;
+        padding: 0;
 
         justify-content: center;
         align-items: center;
