--- a/src/scss/modules/projects.scss
+++ b/src/scss/modules/projects.scss
@@ -36,10 +36,10 @@
     font-family: Roboto Mono;
     box-shadow: 0 4px 16px $shadowDark;
 
-    @media screen and (max-width: $tablet) {
-        line-height: 1.25rem;
-    font-size: 0.75rem;
-    }
+    // @media screen and (max-width: $tablet) {
+    //     line-height: 1.25rem;
+    //     font-size: 0.75rem;
+    // }
 
     &--light {
         background: $terminalBackgroundLight;
